# haltion

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml
docs/: OTP_Implementation.md  README.md
docs/auth/: README.md
docs/otp/: README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20230209_110348_create_otps_table.rs  m20230225_062319_create_users_table.rs  m20230225_062404_create_access_groups_table.rs  m20230225_062412_create_permissions_table.rs  m20230225_064453_create_user_groups_table.rs  m20230225_064502_create_group_permissions_table.rs
src/: app.rs  main.rs  structs.rs
src/config/: constants.rs  env.rs
src/models/: access_groups.rs  group_permissions.rs  mod.rs  otps.rs  permissions.rs  prelude.rs  user_groups.rs  users.rs
src/routes/: jwts.rs  mod.rs  otps.rs  sessions.rs  tenants.rs  users.rs
src/services/: jwts.rs  mod.rs  otps.rs  redis.rs  sessions.rs  tenants.rs  users.rs
src/utils/: jwt.rs  mailer.rs  mod.rs  redis.rs  topt.rs
