[package]
name = "haltion"
version = "0.1.0"
edition = "2021"
default-run = "haltion"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
axum-macros = "0.3.2"
base64 = "0.21.0"
chrono = "0.4.23"
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
jsonwebtoken = "8.2.0"
lazy_static = "1.4.0"
log = "0.4.17"
redis = { version = "0.22.3", features = ["tokio-comp"] }
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = "1.0.152"
serde_json = "1.0.93"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
totp-rs = "^4.2.0"
url = "2.3.1"
